# ico-builder

./: .gitignore  .mailmap  Cargo.toml  changelog.md  readme.md
.github/workflows/: ci.yml
examples/: default-sizes.rs
src/: error.rs  lib.rs
