[package]
name = "ico-builder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Create multi-size ICO files from separate images"
repository = "https://github.com/bash/ico-builder"
readme = "readme.md"
categories = ["multimedia::images"]
keywords = ["image", "size", "ico", "resize"]

[dependencies]
image = { version = "0.25.1", default-features = false, features = ["ico"] }
thiserror = "1.0.38"

[features]
# Re-exports of image features. This list is not exhaustive,
# but PRs are welcome if an important feature is missing :)
jpeg = ["image/jpeg"]
gif = ["image/gif"]
tiff = ["image/tiff"]
